# slot-math-engine-template

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.operator  Dockerfile.regulator  Dockerfile.server  Dockerfile.studio  LICENSE  MASTER_TODO_GDD_CAPSULE_FIRST.md  Makefile  README.md  REPRODUCIBILITY.md  SECURITY.md  SLOTH_MASTER.md  SLOT_ENGINE_MASTER_TODO.md  SLOT_ENGINE_ULTIMATE_SCENARIOS.md  WRATH_DEMO.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  renovate.json  rust-toolchain.toml  stryker.config.mjs  stryker.scoped.config.mjs  tsconfig.json  vitest.config.ts  vitest.stryker.config.ts
agents/: BUILD_BUTTON_AUDITOR.md  BUILD_PIPELINE_REVIEWER.md  MATH_ALGORITHM_AUDITOR.md  MATH_DEBUG_SPECIALIST.md  PAR_PARSER_SPECIALIST.md  QA_AGENT.md  REGULATORY_ORACLE.md  SLIDER_RECOMPUTE_AUDITOR.md  SLOT_MATH_ARCHITECT.md  STUDIO_BUTTON_AUDITOR.md  WEIGHT_PRECISION_AUDITOR.md
data/: antibodies.db
docker/: nginx-spa.conf
docs/: ANALYTICS.md  BACKEND_API.md  CERT_LAB_SUBMISSION.md  CHAOS_ENGINEERING.md  COMMERCIAL_PITCH.md  COMMERCIAL_PITCH_v2.md  CONTINUOUS_HARDENING.md  CSM_OPERATIONS.md  CSM_PLAYBOOK.md  DATABASE.md  DEMO_THEATER.md  DEMO_THEATER_PLAYBOOK.md  DEPENDENCY_UPGRADES.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DISASTER_RECOVERY.md  FUZZ_DISCOVERY.md  GAAS_API.md  HSM_SEED_ARCHITECTURE.md  I18N.md  INCIDENT_RESPONSE.md  INDUSTRY_PATTERN_CATALOG.md  IP_REVIEW.md  IR_SPEC.md  KERNEL_SANDBOX.md  LW_PILOT_PITCH_GUIDE.md  LW_TECHNICAL_DEEP_DIVE.md  LW_VS_COMPETITORS.md  MARKETING_PLAYBOOK.md  MARKETPLACE_API.md  MARKETPLACE_AUTHOR_GUIDE.md  MARKETPLACE_TEMPLATES.md  MARKET_EXPANSION_STRATEGY.md  MATH_QUICK_REFERENCE.md  MOBILE.md  MULTI_TENANT.md  OBSERVABILITY.md  OPERATOR_BRANDING.md  PARALLEL_TASK_LOG.md  PAR_COMMITMENT_SPEC.md  (+45 more)
engine/slot-sim/: Cargo.toml
engine/slot-sim/src/: evaluate.rs  ir.rs  lib.rs  megaways_eval.rs  qmc.rs  reels.rs  rng.rs  sim.rs  stats.rs  ways_eval.rs
engine/slot-sim/src/features/: free_spins.rs  hold_and_win.rs  linear_progressive.rs  mod.rs  pattern_win.rs  pick_bonus.rs  wild_expand.rs
engine/slot-sim/tests/: cash_eruption_engine.rs  cash_eruption_roundtrip.rs  fort_knox_wolf_run_engine.rs  fort_knox_wolf_run_roundtrip.rs  fortune_coin_engine.rs  fortune_coin_roundtrip.rs  greenfield_demo_roundtrip.rs  skeleton_key_engine.rs  skeleton_key_roundtrip.rs  w4_3b_igt_roundtrip.rs  w4_3c_features.rs  w4_4_lw_roundtrip.rs  w4_5_hold_and_win.rs  w4_6_pattern_win.rs  w4_7_event_counts.rs  w4_7_fs_probe.rs  w4_9_wild_expand.rs  w5_5_lw_breakdown_probe.rs
games/ce-copy-test/engine-rust/: Cargo.toml
games/ce-copy-test/engine-rust/src/: base_game.rs  cash_eruption.rs  free_spins.rs  ir.rs  lib.rs  reels.rs  rng.rs  sim.rs
mobile/: README.md  capacitor.config.json  package.json
reports/: cortex-eyes-grid-coverage.md  mc_verify_quick.json  mc_verify_standard.json  symbol-coverage-audit.md
rust-sim/: Cargo.toml  README.md  cargo-mutants.toml
rust-sim/benches/: W212_bench.rs  bulk_throughput.rs  spin_throughput.rs  w244_kernel_bench.rs
rust-sim/configs/: template.json
rust-sim/examples/: billion_spins_replay.rs  gen_expected_w236.rs  kat_probe.rs
rust-sim/fuzz/: Cargo.toml
rust-sim/fuzz/fuzz_targets/: fuzz_alias.rs  fuzz_eval_config.rs  fuzz_packed_grid.rs
rust-sim/scripts/: export_ts_config.ts
rust-sim/src/: analytical.rs  anomaly_self_play.rs  autocorrelation.rs  bonus_buy.rs  cluster_pays.rs  config.rs  evaluator.rs  fault_injection.rs  features.rs  grid.rs  http_server.rs  jackpot.rs  lib.rs  main.rs  markov.rs  markov_persistent.rs  megaways.rs  mystery_jackpot.rs  par.rs  par_export.rs  par_pdf.rs  qmc.rs  qmc_estimator.rs  rational_solver.rs  rng.rs  rng_battery.rs  simulator.rs  stats.rs  tail_fit.rs
rust-sim/src/behavior/: impls.rs  mod.rs  pipeline.rs  registry.rs  types.rs
rust-sim/src/bulk/: checkpoint.rs  dispatcher.rs  mod.rs  parse.rs  progress.rs
rust-sim/src/cluster/: coordinator.rs  mod.rs  protocol.rs  transport.rs
rust-sim/src/gpu/: mod.rs  request.rs  shader.rs  spin_eval.wgsl
rust-sim/src/ir/: adapter.rs  mod.rs  validate.rs
rust-sim/src/jurisdiction/: adapter.rs  mod.rs  profiles.rs  types.rs
rust-sim/src/kernels/: asymmetric_paytable.rs  both_ways.rs  buy_feature.rs  cascade.rs  charge_meter.rs  cluster_pays.rs  expanding_symbol.rs  hold_and_win.rs  inverse_solver.rs  mod.rs  money_collect.rs  multi_dim_inverse_solver.rs  must_hit_by.rs  pay_anywhere.rs  persistent_multiplier.rs  pick_chain.rs  showcase_game.rs  stacked_wilds.rs  state_machine.rs  sticky_wilds.rs  ways_evaluator.rs  wheel.rs
rust-sim/src/numa/: mmap_strips.rs  mod.rs
rust-sim/src/protocols/: bridge.rs  g2s.rs  gat4.rs  mod.rs  sas.rs  types.rs
rust-sim/src/recall/: integrity.rs  journal.rs  mod.rs  replay.rs  types.rs
rust-sim/src/speed/: alias.rs  hot_cold.rs  mod.rs  packed_eval.rs  packed_grid.rs  simd_eval.rs
rust-sim/tests/: faza10_adversarial.rs  faza10_kat.rs  faza10_property.rs  faza11_jurisdiction.rs  faza11_uk_compliance.rs  faza3_behaviors.rs  faza3_behaviors_extra.rs  faza3_features.rs  faza3_registry_mutation_kills.rs  faza4_stats.rs  faza5_jackpot.rs  faza6_markov.rs  faza74_chi_squared_sizes.rs  faza7_rng.rs  faza7_rng_cert.rs  faza7_rng_mutation_kills.rs  faza86_protocols.rs  faza8_rng_strength.rs  faza8_stats.rs  faza93_zero_alloc.rs  faza98_bulk.rs  faza98b_simd_tcp.rs  faza99_numa.rs  faza9_speed.rs  gen_par_sheet_cli.rs  ir_adapter.rs  ir_adapter_mutation_kills.rs  ir_cascade_respin_mystery.rs  ir_pick_wheel_buyfeature_antebet_gamble_symbolupgrade.rs  ir_roundtrip.rs  megaways.rs  par_pro_001.rs  par_pro_002.rs  par_pro_003.rs  par_pro_004.rs  par_pro_005.rs  par_pro_006.rs  par_pro_007_008.rs  par_pro_010.rs  par_pro_015_017.rs  (+16 more)
schemas/: usif-par-v1.0.json
scripts/: acceptance-dossier.mjs  acceptance-golden.mjs  accessibility-audit.mjs  (+201 more)
wasm-oracle/: Cargo.toml
wasm-oracle/src/: lib.rs
(+3917 files in other folders)
