# ─── slot-math-engine-template — Python tooling package ────────────────────
# Universal slot math toolkit: PAR parsing, IR codegen, MC verification,
# cert bundling, evolutionary solvers, provenance, player-behavior
# simulation, and 5 closed-form RTP solver kernels.
#
# Installs the `tools.*` Python packages plus a set of console entry
# points so an operator can run the full slot-math pipeline without
# cloning the entire monorepo.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slot-math-engine-template"
version = "0.1.0"
description = "Universal slot math engine — PAR → IR → MC → cert bundle. Includes evolutionary solvers, crypto-verifiable provenance, player-behavior cohort sim, and 5 closed-form RTP kernels."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary — Vendor-redacted per W-SANITIZE" }
authors = [
    { name = "Boki" },
]
keywords = [
    "slot", "gambling", "math", "rtp", "monte-carlo", "regulator",
    "cert", "merkle", "ed25519", "nsga-ii", "pareto", "genetic",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Sign / verify cert bundles (W5.6 + W7.5)
    "cryptography>=41.0",
]

[project.optional-dependencies]
# TS engine validation gate uses tsx + zod; install via npm not pip
# (see tools/parse_par/_validate_ts_ir.mjs).
smt = [
    "z3-solver>=4.12; python_version>='3.10'",
]
gdd = [
    # PDF extractor for W6.1
    "PyMuPDF>=1.23; python_version>='3.10'",
]
all = [
    "z3-solver>=4.12",
    "PyMuPDF>=1.23",
]

[project.scripts]
# ─── Core pipeline ─────────────────────────────────────────────────────
slot-parse = "tools.parse_par.__main__:main"
slot-build = "tools.slot_build.__main__:main"
slot-build-verify = "tools.slot_build.verify:main"
slot-build-cert = "tools.slot_build.cert_package:main"
# ─── Diagnostics ───────────────────────────────────────────────────────
slot-fs-audit = "tools.diagnostics.fs_rtp_audit:main"
slot-ir-fuzz = "tools.diagnostics.ir_invariant_fuzzer:main"
# ─── Evolution & optimization ──────────────────────────────────────────
slot-evolve = "tools.evolution.genetic_solver:main"
slot-pareto = "tools.evolution.pareto_solver:main"
slot-batch = "tools.evolution.batch_runner:main"
# ─── Player behavior ───────────────────────────────────────────────────
slot-player-sim = "tools.player_sim.session_simulator:main"
# ─── Jurisdiction compliance ───────────────────────────────────────────
slot-jurisdiction-check = "tools.jurisdiction.linter:main"
# ─── Mission #3 — 12×12 Topology × Feature cert lab matrix ─────────────
slot-cert-matrix = "tools.cert_lab.matrix_runner:main"
# ─── Mission #4 — vendor profile scaffolder (Vendor C/D/E + future) ────
slot-vendor-scaffold = "tools.vendor_profiles.scaffold:main"
# ─── Mission #4 — synthetic PAR generator (IR-free roundtrip) ──────────
slot-synth-par = "tools.parse_par.synth_par:main"
# ─── Mission #8 — Studio UI extensions (WebWorker MC + heatmap + editor)
slot-studio-extend = "tools.studio_ext.__main__:main"
# ─── W6.3 / W6.6 — LLM-assisted GDD synthesis + review UI ──────────────
slot-gdd-llm = "tools.gdd_extract.llm_assist:main"
slot-gdd-review-ui = "tools.gdd_extract.review_ui:main"
# ─── W4.9 — Vendor parity doctor (HTML/JSON/MD dashboard)
slot-par-doctor = "tools.diagnostics.par_doctor:main"
# ─── W5.6+ — Regulator XML cert emitter (GLI-16 Appendix D shape)
slot-cert-xml = "tools.slot_build.cert_xml:main"
# ─── W4.9b — Cross-IR diff tool (HTML + JSON A/B comparator)
slot-ir-diff = "tools.diagnostics.ir_diff:main"
# ─── W8 — Operator Pilot Suite (chain every cert + lint into one ZIP)
slot-operator-pilot = "tools.operator_pilot.__main__:main"
# ─── W11 — Drift Sentinel (CI gate for silent IR math drift)
slot-drift-sentinel = "tools.drift_sentinel.__main__:main"
# ─── W14 — CI Gate Aggregator (repo-wide gate of all gates)
slot-ci-gate = "tools.ci_gate.__main__:main"
# ─── W12 — Multi-IR Portfolio Analyzer (RTP/vol/feature matrix)
slot-portfolio = "tools.portfolio.__main__:main"
# ─── W16 — IR Lock & Sign (Merkle + ed25519 on IR sidecar)
slot-ir-lock = "tools.ir_lock.__main__:main"
# ─── W17 — Multi-IR engine-free cohort simulation runner
slot-cohort-sim = "tools.cohort_runner.__main__:main"
# ─── W18 — RNG Quality Mini-Suite (NIST-STS subset)
slot-rng-quality = "tools.rng_quality.__main__:main"
# ─── W19 — Telemetry event schema validator (RGS event stream)
slot-telemetry-validate = "tools.telemetry.__main__:main"
# ─── W20 — Plugin marketplace bundler (versioned ZIP for upload)
slot-plugin-bundle = "tools.plugin_bundle.__main__:main"
# ─── W21 — Replay determinism gate (IR + seed → deterministic stream)
slot-replay-gate = "tools.replay_gate.__main__:main"
# ─── W22 — IR schema versioning + migration framework
slot-ir-migrate = "tools.ir_schema.__main__:main"
# ─── W24 — Audit trail aggregator (per-game timeline)
slot-audit-trail = "tools.audit_trail.__main__:main"
# ─── W23 — IR multi-language localization
slot-localize = "tools.localization.translator:main"
# ─── W25 — Repo-wide coverage report (kernels + jurisdictions + …)
slot-coverage = "tools.coverage_report.__main__:main"
# ─── W27 — Per-game math specification doc generator
slot-math-doc = "tools.math_doc.generator:main"
# ─── W26 — Runtime config cross-reference validator
slot-config-validate = "tools.config_validator.__main__:main"
# ─── W28 — Auto changelog generator (git log → grouped CHANGELOG.md)
slot-changelog = "tools.changelog.__main__:main"

[project.urls]
Homepage = "https://github.com/Bojan20/slot-math-engine-template"
Repository = "https://github.com/Bojan20/slot-math-engine-template"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
exclude = ["tools.tests*", "**/__pycache__"]

[tool.setuptools.package-data]
"tools.vendor_profiles" = ["*.yaml", "*.yml"]
"tools.jurisdiction.profiles" = ["*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tools/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line-length handled separately
]

[tool.ruff.lint.per-file-ignores]
# Tests insert sys.path before importing tools/*, so E402 is by design.
"tools/tests/**" = ["E402"]
# Optional-import shims in CLI modules: try/except sets _HAS_X flag,
# then conditionally imports the heavy module after the guard.
"tools/slot_build/gdd_mode.py" = ["E402"]
"tools/gdd_extract/__main__.py" = ["E402"]
