[package]
name = "slot_sim"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
description = "High-performance slot machine Monte Carlo simulator"
authors = ["Slot Math Engine"]
license = "MIT"

[dependencies]
# Parallel processing - latest stable
rayon = "1.11"

# CLI argument parsing - latest 4.x
clap = { version = "4.5", features = ["derive"] }

# JSON serialization - latest
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Progress bar - latest
indicatif = { version = "0.18", features = ["rayon"] }

# FAZA 9 — Speed: SIMD abstractions (NEON/AVX2/SSE2 auto-dispatch, stable Rust)
wide = "0.7"

# FAZA 9 — Speed: arena allocator for zero-heap per-spin temporaries
bumpalo = "3"

# No external RNG needed - using Mulberry32 for TS compatibility

# FAZA 3 — Behavior layer: lightweight random for mystery reveals
# Pinned to 1.x — 2.4+ pulls getrandom 0.4 which requires edition2024
fastrand = "1.9"

[dev-dependencies]
# Benchmark harness with HTML reports and regression detection
criterion = { version = "0.5", features = ["html_reports"] }
# FAZA 10 — Testing Fortress: property-based testing
# Pin proptest 1.4 + tempfile 3.12 to avoid fastrand 2.4 → getrandom 0.4 (edition2024)
proptest = "= 1.4.0"
# Explicit pin so proptest's rusty-fork does not resolve to tempfile 3.13+
tempfile = "= 3.12.0"

[[bench]]
name = "spin_throughput"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.bench]
inherits = "release"
debug = true
