[package]
name = "slot_sim"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
description = "High-performance slot machine Monte Carlo simulator"
authors = ["Slot Math Engine"]
license = "MIT"

[dependencies]
# Parallel processing - latest stable
rayon = "1.11"

# CLI argument parsing - latest 4.x
clap = { version = "4.5", features = ["derive"] }

# JSON serialization - latest
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Progress bar - latest
indicatif = { version = "0.18", features = ["rayon"] }

# FAZA 9 — Speed: SIMD abstractions (NEON/AVX2/SSE2 auto-dispatch, stable Rust)
wide = "0.7"

# FAZA 9 — Speed: arena allocator for zero-heap per-spin temporaries
bumpalo = "3"

# No external RNG needed - using Mulberry32 for TS compatibility

# FAZA 3 — Behavior layer: lightweight random for mystery reveals
# Pinned to 1.x — 2.4+ pulls getrandom 0.4 which requires edition2024
fastrand = "1.9"

# FAZA 8.5 — Spin recall: sha256 hash chain. Pure-rust impl, no openssl/
# libgmp deps, stable across all platforms in our target matrix.
sha2 = "0.10"

# FAZA 9.8b — GPU compute scaffold. Off by default so the toolchain
# matrix stays light; flip on with `cargo build --features gpu` once the
# wgpu integration lands.
[features]
default = []
gpu = []

[dev-dependencies]
# Benchmark harness with HTML reports and regression detection
criterion = { version = "0.5", features = ["html_reports"] }
# FAZA 10 — Testing Fortress: property-based testing
# Pin proptest 1.4 + tempfile 3.12 to avoid fastrand 2.4 → getrandom 0.4 (edition2024)
proptest = "= 1.4.0"
# Explicit pin so proptest's rusty-fork does not resolve to tempfile 3.13+
tempfile = "= 3.12.0"

[[bench]]
name = "spin_throughput"
harness = false

# FAZA 9.8 — 1T acceptance benchmark. Run with:
#   cargo bench --bench bulk_throughput
[[bench]]
name = "bulk_throughput"
harness = false

# Package-wide lint policy.
#
# New modules (`ir`, `recall`) ship with `-D warnings` clean. The
# pre-existing simulation / evaluator / speed / analytical / markov
# modules carry idiomatic lint debt accumulated across Faza 0→10 that's
# scheduled for the Faza 2 cleanup pass. Allow-list is narrow — only the
# specific lint kinds that actually trip in the legacy code, not a
# blanket `-A warnings`. Anything new must justify additions.
#
# `[lints]` in Cargo.toml applies to the library AND every test/example
# target, so we don't have to repeat `#![allow(...)]` in every file.
[lints.clippy]
needless_range_loop = "allow"
manual_range_contains = "allow"
needless_borrow = "allow"
unnecessary_cast = "allow"
field_reassign_with_default = "allow"
type_complexity = "allow"
never_loop = "allow"
doc_lazy_continuation = "allow"
enum_variant_names = "allow"
bool_assert_comparison = "allow"
explicit_counter_loop = "allow"
explicit_auto_deref = "allow"
inconsistent_digit_grouping = "allow"
unreadable_literal = "allow"
unusual_byte_groupings = "allow"
useless_vec = "allow"
approx_constant = "allow"

[lints.rust]
unused_variables = "allow"
unused_assignments = "allow"
dead_code = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.bench]
inherits = "release"
debug = true
